# prometeo-mcp

./: .env.example  README.md  pyproject.toml  pytest.ini  server.py
examples/: prompts.txt
mcp/: server.py
prometeo_mcp/: background_validation.py  config.py  server.py  utils.py
prometeo_mcp/account_validation/: background.py  tools.py
prometeo_mcp/banking/: tools.py
prometeo_mcp/crossborder/: tools.py
prometeo_mcp/curp/: tools.py
prometeo_mcp/docs/: bcu.yml  cep.yml  crossborder.yml  dian.yml  identity.yml  payments.yml  prometeo.yml  sat.yml  sunat.yml  validation.yml
prometeo_mcp/openapi/: resource.py
tests/: test_background_validation.py  test_server.py
